fix scrollbar offset

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -504,6 +504,8 @@ h2.default-h2 {
 .b-reviews__wrapper {
   overflow: hidden;
   margin-top: 42px;
+  margin-left: calc(var(--horizontal-offset) * -1);
+  margin-right: calc(var(--horizontal-offset) * -1);
 }
 .b-reviews__wrapper > div {
   margin-bottom: -17px;
@@ -511,6 +513,8 @@ h2.default-h2 {
   padding-bottom: 17px;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
+  padding-left: var(--horizontal-offset);
+  padding-right: var(--horizontal-offset);
 }
 .b-reviews__list {
   display: flex;
@@ -940,6 +944,12 @@ h2.default-h2 {
   width: 100%;
   height: 100%;
   overflow-y: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.b-popup--fullsize .b-popup__content {
+  display: block;
 }
 .b-popup__card {
   position: relative;
@@ -949,6 +959,7 @@ h2.default-h2 {
   opacity: 0;
   transform: scale(0);
   transition: opacity ease-in-out 0.2s, transform ease-in-out 0.3s;
+  width: fit-content;
 }
 .b-popup.b-popup--opened .b-popup__backdrop {
   opacity: 1;
